--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -20,7 +20,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.brikoolapp"
     },
     "web": {
       "bundler": "metro",
@@ -32,6 +33,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4631ebf2-c0e5-42a8-b511-6737a9cbdd86"
+      }
+    },
+    "owner": "aymane07x"
   }
 }
