--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -47,7 +47,9 @@
     "react-native-star-rating-widget": "^1.9.1",
     "react-native-web": "~0.19.10",
     "react-query": "^3.39.3",
-    "twrnc": "^4.5.1"
+    "twrnc": "^4.5.1",
+    "expo-notifications": "~0.28.19",
+    "expo-device": "~6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
