--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@floating-ui/react-dom": "^2.1.2",
     "@fontsource/roboto": "^5.1.0",
-    "@mui/icons-material": "^6.1.2",
-    "@mui/joy": "^5.0.0-beta.48",
-    "@mui/material": "^6.1.2",
-    "@mui/styled-engine-sc": "^6.1.2",
+    "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -18,9 +17,9 @@
     "i18next": "^24.0.5",
     "lucide-react": "^0.452.0",
     "notistack": "^3.0.1",
-    "react": "^18.3.1",
+    "react": "18.2.0",
     "react-cookie": "^7.2.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.1.3",
     "react-multi-carousel": "^2.8.5",
