--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
+NODE_ENV=development
 PORT=8000
 
 JWT_SECRET_KEY=GWW9
@@ -8,3 +9,5 @@ GOOGLE_CLIENT_ID=798818853010-40edtvf49br8snehqnd3gvqkd7glv8do.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 FRONTEND_URL=http://localhost:3000
+
+RESEND_API_KEY=re_TmRwEUc9_29ts6zsKiHi8fv8zsx38VKRF
