--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "expo-server-sdk": "^3.11.0",
     "express": "^4.21.0",
@@ -29,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "resend": "^4.0.1",
     "socket.io": "^4.8.0"
   },
   "devDependencies": {
